--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <title>Eagle Construction Company</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'YOUR-GA-ID');
-    </script>
+    
 </head>
 <body>
     <header>
         <h1>Eagle Construction Company</h1>
+        <button class="menu-toggle" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
@@ -97,5 +94,6 @@
             <li><a href="https://www.youtube.com"><i class="fab fa-youtube"></i> YouTube</a></li>
         </ul>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
