Add about and services

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eagle Construction Company</title>
+    <title>Eagle Brothers Construction</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
 </head>
 <body>
     <header>
-        <h1>Eagle Construction Company</h1>
+        <h1>Eagle Brothers Construction</h1>
         <button class="menu-toggle" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
@@ -30,7 +30,7 @@
 
     <main>
         <section id="home">
-            <h2>Welcome to Eagle Construction</h2>
+            <h2>Welcome to Eagle Brothers Construction</h2>
             <div class="hero">
                 <h3>Quality Construction Services</h3>
                 <a href="#contact" class="cta-button">Get a Free Estimate</a>
@@ -40,14 +40,28 @@
         <section id="about">
             <h2>About Us</h2>
             <div class="about-content">
-                <p>Learn about our company story, experience, and dedicated team.</p>
+                <p>For over 20 years, The Eagle Brothers have been transforming homes in the North London and Barnet & Enfield community with quality craftsmanship and dedicated service. We are a family-run business, driven to provide the highest level of detail and professionalism in the home-building space.</p>
+                <p>Our mission is to give you the exact home you want, with a focus on quality, care, and attention to detail. We partner closely with local gyms and fight clubs to support our community, offering apprenticeships and training for young people.</p>
+                <p>Meet our team:</p>
+                <ul>
+                    <li><strong>Parryk Piasecki</strong> - Leader, Project Manager, Carpenter. Specializes in Carpentry and Interior Decorating.</li>
+                    <li><strong>Robert Elliot</strong> - Specialty in Plumbing and Heating. Over 15 years of experience in domestic plumbing systems.</li>
+                    <li><strong>Joshua Lloyd</strong> - Specialty in Marketing and IT. Manages marketing and communication within the organization.</li>
+                </ul>
             </div>
         </section>
 
         <section id="services">
             <h2>Our Services</h2>
             <div class="services-content">
-                <p>Discover our comprehensive construction services.</p>
+                <p>At Eagle Brothers Construction, we offer a wide range of services to meet your home-building needs:</p>
+                <ul>
+                    <li><strong>Bathroom & Kitchen Installation</strong> - Transform your spaces with precision and to your exact specifications.</li>
+                    <li><strong>Plumbing & Heating</strong> - Expert installation, repair, and maintenance of domestic plumbing systems.</li>
+                    <li><strong>Carpentry & Interior Decorating</strong> - Quality craftsmanship for your home's interior.</li>
+                    <li><strong>All Stages of Construction</strong> - From tear down to tiling, we handle every step with care.</li>
+                </ul>
+                <p>We are passionate about building your quality home with the highest level of detail and professionalism.</p>
             </div>
         </section>
 
